<resources>
    <string name="app_name">Wan-Android</string>
    <string name="title_home">首页</string>
    <string name="title_square">广场</string>
    <string name="title_video">视频</string>
    <string name="title_music">音乐</string>
    <string name="title_mine">我的</string>

    <string name="home_hot">热门</string>
    <string name="home_day_recommend">今日推荐</string>

    <string name="mine_login">注册/登录</string>


</resources>
