<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_square" />

    <item
        android:id="@+id/navigation_navi"
        android:icon="@drawable/ic_svg_video_uncheck"
        android:title="@string/title_video" />
    <item
        android:id="@+id/navigation_tree"
        android:icon="@drawable/ic_svg_music_uncheck"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_svg_mine_uncheck"
        android:title="@string/title_mine" />

</menu>
