<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/title_home" />

        <RelativeLayout
            android:id="@+id/rvh"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.youth.banner.Banner
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <RelativeLayout
                android:id="@+id/rl_weather"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/banner"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/home_hot"
                    android:textColor="@color/text_color_1"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_real_tem"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="20dp"
                    android:layout_toLeftOf="@id/tv_tem_scope"
                    android:gravity="center"
                    android:text="18℃"
                    android:textColor="@color/text_color_1"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_tem_scope"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/tv_weather"
                    android:text="18℃~22℃"
                    android:textColor="@color/text_color_2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/iv_weather"
                    android:text="晴天"
                    android:textColor="@color/text_color_2"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_svg_mine_uncheck" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toLeftOf="@id/tv_week"
                    android:text="2020-03-03"
                    android:textColor="@color/text_color_2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_week"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="5dp"
                    android:layout_toLeftOf="@id/iv_weather"
                    android:text="星期二"
                    android:textColor="@color/text_color_2"
                    android:textSize="16sp" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_hot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_weather"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <ImageView
                    android:id="@+id/iv_hot_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/home_hot_1" />

                <ImageView
                    android:id="@+id/iv_hot_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:scaleType="fitXY"
                    android:src="@drawable/home_hot_1" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_news_recommend"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_below="@id/ll_hot"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:text="@string/home_day_recommend"
                android:textColor="@color/text_color_1"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/homeListContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvh" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>